# proleap-vb6-parser

./: .gitignore  README.md  pom.xml
docs/superpowers/plans/: 2026-05-01-vb6-tree-sitter-adapter.md
docs/superpowers/specs/: 2026-05-01-vb6-tree-sitter-adapter-design.md
src/main/java/io/proleap/vb6/asg/metamodel/call/impl/: CallDelegateImpl.java
src/main/java/io/proleap/vb6/asg/metamodel/impl/: ProcedureImpl.java  ScopeImpl.java
src/main/java/io/proleap/vb6/asg/metamodel/statement/foreach/impl/: ForEachImpl.java
src/main/java/io/proleap/vb6/asg/metamodel/statement/fornext/impl/: ForNextImpl.java
src/main/java/io/proleap/vb6/asg/metamodel/type/: VbBaseType.java
src/main/java/io/proleap/vb6/cli/: ASTJsonSerializer.java  VbParserCLI.java
src/test/java/io/proleap/vb6/cli/: ASTJsonSerializerTest.java  VbParserCLITest.java
src/test/resources/: logback-test.xml
vb6-parser-python/: pyproject.toml
vb6-parser-python/tests/: conftest.py  test_basic.py  test_cursor.py  test_errors.py  test_node.py  test_semantic.py
vb6-parser-python/vb6_parser/: __init__.py  _cursor.py  _errors.py  _jar.py  _node.py  _parser.py  _tree.py
